--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                 </a> </div>
               <!--/ Project 2--> 
               <!--Project 3-->
-              <!-- <div class="cbp-item application"> <a href="ajax/portfolio3.html" class="cbp-caption cbp-singlePage">
+              <div class="cbp-item application"> <a href="ajax/portfolio3.html" class="cbp-caption cbp-singlePage">
                 <div class="cbp-caption-defaultWrap"> <img src="images/portfolio/3.jpg" alt=""> </div>
                 <div class="cbp-caption-activeWrap">
                   <div class="cbp-l-caption-alignLeft">
@@ -229,10 +229,10 @@
                     </div>
                   </div>
                 </div>
-                </a> </div> -->
+                </a> </div>
               <!--/ Project 3--> 
               <!--Project 4-->
-              <!-- <div class="cbp-item game"> <a href="ajax/portfolio4.html" class="cbp-caption cbp-singlePage">
+              <div class="cbp-item game"> <a href="ajax/portfolio4.html" class="cbp-caption cbp-singlePage">
                 <div class="cbp-caption-defaultWrap"> <img src="images/portfolio/4.jpg" alt=""> </div>
                 <div class="cbp-caption-activeWrap">
                   <div class="cbp-l-caption-alignLeft">
@@ -242,7 +242,7 @@
                     </div>
                   </div>
                 </div>
-                </a> </div> -->
+                </a> </div>
               <!--/ Project 4--> 
               <!--Project 5-->
               <div class="cbp-item application"> <a href="ajax/portfolio5.html" class="cbp-caption cbp-singlePage">
@@ -258,7 +258,7 @@
                 </a> </div>
               <!--/ Project 5--> 
               <!--Project 6-->
-              <!-- <div class="cbp-item game"> <a href="ajax/portfolio6.html" class="cbp-caption cbp-singlePage">
+              <div class="cbp-item game"> <a href="ajax/portfolio6.html" class="cbp-caption cbp-singlePage">
                 <div class="cbp-caption-defaultWrap"> <img src="images/portfolio/6.jpg" alt=""> </div>
                 <div class="cbp-caption-activeWrap">
                   <div class="cbp-l-caption-alignLeft">
@@ -268,10 +268,10 @@
                     </div>
                   </div>
                 </div>
-                </a> </div> -->
+                </a> </div>
               <!--/ Project 6--> 
               <!--Project 7-->
-              <!-- <div class="cbp-item game"> <a href="ajax/portfolio7.html" class="cbp-caption cbp-singlePage">
+              <div class="cbp-item game"> <a href="ajax/portfolio7.html" class="cbp-caption cbp-singlePage">
                 <div class="cbp-caption-defaultWrap"> <img src="images/portfolio/7.jpg" alt=""> </div>
                 <div class="cbp-caption-activeWrap">
                   <div class="cbp-l-caption-alignLeft">
@@ -281,10 +281,10 @@
                     </div>
                   </div>
                 </div>
-                </a> </div> -->
+                </a> </div>
               <!--/ Project 7--> 
               <!--Project 8-->
-              <!-- <div class="cbp-item application"> <a href="ajax/portfolio8.html" class="cbp-caption cbp-singlePage">
+              <div class="cbp-item application"> <a href="ajax/portfolio8.html" class="cbp-caption cbp-singlePage">
                 <div class="cbp-caption-defaultWrap"> <img src="images/portfolio/8.jpg" alt=""> </div>
                 <div class="cbp-caption-activeWrap">
                   <div class="cbp-l-caption-alignLeft">
@@ -294,10 +294,10 @@
                     </div>
                   </div>
                 </div>
-                </a> </div> -->
+                </a> </div>
               <!--/ Project 8--> 
               <!--Project 9-->
-                <!-- <div class="cbp-item application"> <a href="ajax/portfolio9.html" class="cbp-caption cbp-singlePage">
+                <div class="cbp-item application"> <a href="ajax/portfolio9.html" class="cbp-caption cbp-singlePage">
                   <div class="cbp-caption-defaultWrap"> <img src="images/portfolio/9.jpg" alt=""> </div>
                   <div class="cbp-caption-activeWrap">
                     <div class="cbp-l-caption-alignLeft">
@@ -307,7 +307,7 @@
                       </div>
                     </div>
                   </div>
-                  </a> </div>                 -->
+                  </a> </div>                
               <!--/ Project 9--> 
             </div>
             
