--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <div class="mainBanner-content text-center text-uppercase">
               <h1>Jordan Lapid</h1>
               <!-- <p> <span id="js-rotating" data-animation="rotateInDownLeft">Full Stack, Web, Software, Javascript</span><span> Developer</span> </p> -->
-              <p>Web Developer</p>
+              <p>Tech Enthusiast</p>
               <a href="#about-us" class="btn-bdr move marT50">About Me</a>
               <a href="#portfolio" class="btn-bdr move marT50">Samples</a>
             </div>
