--- a/index.html
+++ b/index.html
@@ -124,9 +124,9 @@
               <div class="title-style-3">
                 <h2 class="text-uppercase"> About Me</h2>
                 <span class="title-spt"></span> </div>
-              <p>Hi, my name is Jordan. I’m a full stack web developer who enjoys building products and applications while feeding my appetite for creativity.  I have 5 years of professional experience in finance, and 8 years in managing a small business, where I have developed experience that I can transition into tech such as: the ability to analyze and create solutions, make decisions, collaborate with others, and manage projects.</p>
+              <p>Hi, my name is Jordan. I enjoy all things technology and have experience in building web applications, implementing business intelligence solutions, and providing data insights. I’ve always been passionate about utilizing code and data to identify issues, create solutions, and inform decisions. </p>
               
-              <p>I’ve built applications using the following technologies: HTML, CSS, AJAX, RESTful APIs, Javascript, React, Bootstrap, Materialize, Node.js, Express.js, MongoDB, mySQL, Sequelize, and Firebase. I have a passion for creating and manipulating code, and I’m excited to utilize my current skill set and the skills that I’ve gained as a developer to continue learning and become an asset in the field.
+              <p>In recent times, my primary focus has been on building end-to-end reporting solutions for clients, but I have also developed web applications using the MERN stack.  It’s in my nature to be curious and solve problems. I am always seeking to learn something new.
               </p>
               </br>
               <a href="https://github.com/jordanlapid/jordanlapid.github.io/raw/master/resume/resume.pdf" class="btn btn-dark">My Resume</a>
