--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
             <!--Grid Container-->
             <div id="portfolio-grid-container" class="cbp-l-grid-projects marT15" data-caption="overlayBottomReveal" data-animation="slideLeft" data-gaphorizontal="38" data-gapvertical="50" data-logo="images/logo/logo-white.png"> 
               <!--Project 1-->
-               <div class="cbp-item game"> <a href="ajax/portfolio1.html" class="cbp-caption cbp-singlePage">
+               <!--<div class="cbp-item game"> <a href="ajax/portfolio1.html" class="cbp-caption cbp-singlePage">
                 <div class="cbp-caption-defaultWrap"> <img src="images/portfolio/1.jpg" alt=""> </div>
                 <div class="cbp-caption-activeWrap">
                   <div class="cbp-l-caption-alignLeft">
@@ -203,7 +203,7 @@
                     </div>
                   </div>
                 </div>
-                </a> </div> 
+                </a> </div> -->
               <!--/ Project 1--> 
 
               <!--Project 2-->
