--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <ul class="nav navbar-nav">
             <li class="active home"><a href="#home">Home</a></li>
             <li><a href="#about-us">About</a></li>
-            <li><a href="#portfolio">Samples</a></li>
+           <!-- <li><a href="#portfolio">Samples</a></li> -->
             <li><a href="#contact">Contact</a></li>
           </ul>
         </div>
@@ -103,9 +103,9 @@
             <div class="mainBanner-content text-center text-uppercase">
               <h1>Jordan Lapid</h1>
               <!-- <p> <span id="js-rotating" data-animation="rotateInDownLeft">Full Stack, Web, Software, Javascript</span><span> Developer</span> </p> -->
-              <p>Tech Enthusiast</p>
+              <!--<p>Tech Enthusiast</p>-->
               <a href="#about-us" class="btn-bdr move marT50">About Me</a>
-              <a href="#portfolio" class="btn-bdr move marT50">Samples</a>
+              <!--<a href="#portfolio" class="btn-bdr move marT50">Samples</a>-->
             </div>
           </div>
         </div>
@@ -176,9 +176,9 @@
           <div class="col-md-6"> 
             <!--Section Title-->
             <div class="heading wow fadeIn" data-wow-delay=".2s" data-wow-duration="1s">
-              <div class="title-style-3">
+              <!--<div class="title-style-3">
                 <h2 class="text-uppercase"> Samples</h2>
-                <span class="title-spt"></span> </div>
+                <span class="title-spt"></span> </div> -->
             </div>
             <!--/Section Title--> 
           </div>
@@ -193,7 +193,7 @@
             <!--Grid Container-->
             <div id="portfolio-grid-container" class="cbp-l-grid-projects marT15" data-caption="overlayBottomReveal" data-animation="slideLeft" data-gaphorizontal="38" data-gapvertical="50" data-logo="images/logo/logo-white.png"> 
               <!--Project 1-->
-               <div class="cbp-item game"> <a href="ajax/portfolio1.html" class="cbp-caption cbp-singlePage">
+              <!-- <div class="cbp-item game"> <a href="ajax/portfolio1.html" class="cbp-caption cbp-singlePage">
                 <div class="cbp-caption-defaultWrap"> <img src="images/portfolio/1.jpg" alt=""> </div>
                 <div class="cbp-caption-activeWrap">
                   <div class="cbp-l-caption-alignLeft">
@@ -203,7 +203,7 @@
                     </div>
                   </div>
                 </div>
-                </a> </div> 
+                </a> </div> -->
               <!--/ Project 1--> 
 
               <!--Project 2-->
@@ -263,7 +263,7 @@
               <!--/ Project 5--> 
 
               <!--Project 6-->
-              <div class="cbp-item game"> <a href="ajax/portfolio6.html" class="cbp-caption cbp-singlePage">
+              <!-- <div class="cbp-item game"> <a href="ajax/portfolio6.html" class="cbp-caption cbp-singlePage">
                 <div class="cbp-caption-defaultWrap"> <img src="images/portfolio/6.jpg" alt=""> </div>
                 <div class="cbp-caption-activeWrap">
                   <div class="cbp-l-caption-alignLeft">
@@ -273,7 +273,7 @@
                     </div>
                   </div>
                 </div>
-                </a> </div>
+                </a> </div> -->
               <!--/ Project 6--> 
 
               <!--Project 7-->
