about me updates

--- a/index.html
+++ b/index.html
@@ -124,9 +124,11 @@
               <div class="title-style-3">
                 <h2 class="text-uppercase"> About Me</h2>
                 <span class="title-spt"></span> </div>
-              <p>Hi, my name is Jordan. I enjoy all things technology and have experience in building web applications, implementing business intelligence solutions, and providing data insights. I’ve always been passionate about utilizing code and data to identify issues, create solutions, and inform decisions. </p>
-              
-              <p>In recent times, my primary focus has been on building end-to-end reporting solutions for clients, but I have also developed web applications using the MERN stack.  It’s in my nature to be curious and solve problems. I am always seeking to learn something new.
+              <p>
+                Hi, my name is Jordan. I enjoy all things technology and have experience in building web applications, implementing business intelligence solutions, and providing data insights. I’ve always been passionate about utilizing code and data to identify issues, create solutions, and inform decisions. 
+              </p>
+              <p>
+                  Recently, my primary focus has been on building out end-to-end reporting solutions to support both ad hoc analysis and published documentation, but I have also developed web applications using the MERN stack.  It’s in my nature to be curious and solve problems. I am a lifelong learner, always seeking to learn something new.
               </p>
               </br>
               <a href="https://github.com/jordanlapid/jordanlapid.github.io/raw/master/resume/resume.pdf" class="btn btn-dark">My Resume</a>
