updating about me

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 Hi, my name is Jordan. I enjoy all things technology and have experience in building web applications, implementing business intelligence solutions, and providing data insights. I’ve always been passionate about utilizing code and data to identify issues, create solutions, and inform decisions. 
               </p>
               <p>
-                  Recently, my primary focus has been on building out end-to-end reporting solutions to support both ad hoc analysis and published documentation. It’s in my nature to be curious and solve problems. I am a lifelong learner, always seeking to learn something new.
+                  Recently, my primary focus has been on building out end-to-end reporting solutions to support both ad hoc analysis and published documentation. It’s in my nature to be curious and solve problems. I am a lifelong learner, always looking to keep up with today's technologies.
               </p>
               </br>
               <a href="https://github.com/jordanlapid/jordanlapid.github.io/raw/master/resume/resume.pdf" class="btn btn-dark">My Resume</a>
